--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                         animation: {
                             "spin-slow": "spin 8s linear infinite",
                             spiral: "spiral 20s linear infinite",
+                            "spiral-reverse":
+                                "spiralReverse 20s linear infinite",
                             "pulse-led": "pulseLed 2s ease-in-out infinite",
                             "slide-up":
                                 "slideUp 0.3s cubic-bezier(0.16, 1, 0.3, 1)",
@@ -48,6 +50,10 @@
                             spiral: {
                                 "0%": { transform: "rotateY(0deg)" },
                                 "100%": { transform: "rotateY(360deg)" },
+                            },
+                            spiralReverse: {
+                                "0%": { transform: "rotateY(360deg)" },
+                                "100%": { transform: "rotateY(0deg)" },
                             },
                             pulseLed: {
                                 "0%, 100%": { opacity: "0.8" },
@@ -237,11 +243,13 @@
                                 class="led-large"
                                 :style="getLEDPosition(i)"
                             >
-                                <div
-                                    class="led-light-large"
-                                    :style="getLEDColor(i)"
-                                    :class="{ 'animate-pulse-led': getLEDIntensity(i) > 0.7 }"
-                                ></div>
+                                <div class="animate-spiral-reverse h-full">
+                                    <div
+                                        class="led-light-large"
+                                        :style="getLEDColor(i)"
+                                        :class="{ 'animate-pulse-led': getLEDIntensity(i) > 0.7 }"
+                                    ></div>
+                                </div>
                             </div>
                         </div>
                     </div>
